# mhxd

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  PROBLEMS  README  README.SQL  README.gtk  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  hxd.sql  mk-links
.github/workflows/: main.yml
autom4te.cache/: output.0  traces.0
cfgaux/: missing
doc/hxd/: Access  Antispam  AppleVolumes.system  Banlist  Commands  Conf  HowTo  INSTALL  MakingBinaries  Problems  TextEdit  allow-deny  cipher  dropbox  netstat  pidfile
libltdl/: configure  mkinstalldirs
macros/: autogen.sh
misc/: Makefile  comment2cap.c  havaltest.c  hmactest.c  libtreg.c  libtreg.h  macbin.c  md5test.c  serverscan.c  shatest.c  stress.c  tdb.c  testvarargs.c  tlist.c  treg.c  tspoof.c  unprox.c  webstat_061.tgz
run/hx/: ghxrc  ghxvars  ghxvars.jp  hxrc  hxvars
run/hxd/: .common  banlist  hxd.conf  log  news
run/hxd/accounts/admin/: UserData  access  conf
run/hxd/accounts/guest/: UserData  conf
run/hxd/etc/: .?inputcache  .?outputcache  AppleVolumes.system  find.conf  locate.conf  netstat.conf  newuser  rmuser
run/hxd/exec/: ?  accounts  banlist  df  find  help  locate  login  mail  netstat  seen  uname  update  uptime  whoami
run/hxd/newsdir/cat_irasshaimase/: 1
run/hxtrackd/: hxtrackd.conf  tracker_banlist
src/: Makefile.am  Makefile.in
src/acctedit/: Makefile  Makefile.am  Makefile.in  acctedit.c
src/apple/: Makefile  Makefile.am  Makefile.in  alias.c  alias.h  api.h  files.c  files.h  unicode.c  unicode.h
src/cipher/: Makefile  Makefile.am  Makefile.in  cipher.c  cipher.h  cipher_openssl.h  haval.c  haval.h  hmac.c  md5.c  md5.h  rand.c  sha.c  sha.h
src/common/: Makefile.am  Makefile.in  conv.c  conv.h  decode.c  fd.c  hfs.c  hfs.h  hldump.c  hldump.h  hlwrite.c  hotline.h  hxd.c  hxd.conf.in  hxd.h  hxd_config.c  hxd_config.h  hxd_rcv.h  hxd_wanted.c  mkhldumph.pl  module.c  module.h  spam.conf.in  spinlock.h  sys_deps.h  sys_net.h  threads.c  threads.h  trx.h  version.c
src/compress/: Makefile  Makefile.am  Makefile.in  compress.c  compress.h
src/conf/: Makefile.am  Makefile.in  conf.c  conf.h  genconf.c
src/ghx/: Makefile  Makefile.am  Makefile.in  berw.h  chat.c  chat.h  cicn.c  cicn.h  cmenu.c  cmenu.h  connect.c  files.c  gtk_hlist.c  gtk_hlist.h  history.c  history.h  hx_gtk.c  hx_gtk.h  hx_gtk_about.c  icons.c  icons.h  news.c  news15.c  news15.h  newscat.xpm  newsfld.xpm  options.c  tasks.c  toolbar.c  tracker.c  useredit.c  users.c
src/hx/: Makefile.am  Makefile.in  berw.h  connect.c  files.c  hal.c  hlclient.c  hx.h  hx_chat.c  hx_commands.c  hx_rcv.c  hx_tty.c  hx_users.c  macres.c  macres.h  news.c  news.h  sound.c  sound.h  tasks.c  tracker.c  translate.c  translate.h  xmmslib.c
src/hxd/: Makefile  Makefile.am  Makefile.in  accounts.c  chat.c  commands.c  commands.h  files.c  hlserver.c  hlserver.h  htxf.c  ident.c  news.c  queue.c  queue.h  rcv.c  rcv.h  snd.c  snd.h  spam.c  spam.h  sql.c  tnews.c  tracker.c
src/hxtrackd/: Makefile  Makefile.am  Makefile.in  tracker.c
src/lib/: Makefile.am  Makefile.in  basename.c  fnmatch.c  getline.c  getline.h  getopt.h  getopt1_r.c  getopt_r.c  inet_aton.c  inet_ntoa_r.c  localtime_r.c  realpath.c  snprintf.c  strcasestr.c  strptime.c  xmalloc.c  xmalloc.h
src/protocol/: Makefile  Makefile.am  Makefile.in  chatproto.h  hotline.c  irc.c  irc.h  protocols.c  protocols.h
